# Rust-Secure-Cloud

./: .gitignore  README.md
secure_cloud/: Cargo.toml
secure_cloud/src/: files.rs  main.rs  network.rs  structs.rs
secure_cloud_client/: Cargo.toml
secure_cloud_client/src/: authentication.rs  creation.rs  crypto.rs  files.rs  inputs.rs  main.rs  network.rs  requests.rs  shamir.rs  structs.rs  tui.rs
